# TTS-Story

./: .gitignore  DOCS.md  README.md  app.py  config.json  install.json  pyproject.toml  requirements.txt  run.bat  run.sh  setup-uv.bat  setup-uv.sh  setup.bat  setup.sh
data/: chatterbox_voices.json  custom_voices.json
docs/: CLEANUP_SUMMARY.md  FINAL_FIXES_SUMMARY.md  INSTALLATION_OPTIONS.md  PYTHON_VERSION_FIX.md  QUICKSTART.md  README.md  SMART_SETUP.md  UV_SETUP_SOLUTION.md
src/: __init__.py  audio_merger.py  custom_voice_store.py  document_extractor.py  gemini_processor.py  llm_processor.py  replicate_api.py  text_processor.py  tts_engine.py  voice_manager.py
src/engines/: base.py  chatterbox_engine.py  chatterbox_turbo_local_engine.py  chatterbox_turbo_replicate_engine.py  kokoro_engine.py  voxcpm_local_engine.py
static/css/: style.css
static/js/: library.js  main.js  queue.js  settings.js  voice-manager.js
templates/: index.html
